Tabellen-Layout Issue Nr. 57 .daten-tabelle

--- a/static/css/lens.css
+++ b/static/css/lens.css
@@ -1533,6 +1533,36 @@ body.loading .spinner-wrapper {
   padding-bottom: 0 !important;
 }
 
+/** Layout Daten-Tabelle Issue Nr. 58 **/
+
+
+.lens-article .content-node.html-table .daten-tabelle {
+  border: 1px solid #f8f8f8;
+  overflow-x: scroll;
+}
+
+.lens-article .content-node.html-table .daten-tabelle tr {
+  vertical-align: top;
+}
+
+.lens-article .content-node.html-table .daten-tabelle tr:nth-child(odd) { 
+  background-color: #f8f8f8;
+}
+
+.lens-article .content-node.html-table .daten-tabelle tr:nth-child(odd) > td:empty {
+  background-color: #f8f8f8;
+}
+
+
+.lens-article .content-node.html-table .daten-tabelle td {
+  border-right: 1px solid #f8f8f8;
+  padding: 10px;
+}
+
+
+
+
+
 /** Listen **/
 
 .content.simple {
